🐛 fix z-index problem

--- a/src/renderer/ui/components/user_profile_status/style/index.scss
+++ b/src/renderer/ui/components/user_profile_status/style/index.scss
@@ -7,7 +7,7 @@
     position: absolute;
     border-radius: 100%;
     left:0;
-    z-index: 5;
+    z-index: 1;
     &.online {
       background-color: $goodgreen;
     }
